[package]
name = "fbbe"
description = "Fast Bitcoin Block Explorer"
version = "0.1.6"
edition = "2021"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
license = "MIT"
repository = "https://github.com/RCasatta/fbbe"
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.21.2", features = [
    "rt",
    "rt-multi-thread",
    "signal",
    "macros",
] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
once_cell = "1.16.0"
maud = "0.25.0"
env_logger = "0.10.0"
bitcoin = { version = "0.30", features = ["serde", "base64"] }
log = "0.4.17"
chrono = "0.4.23"
html2text = "0.6"
mime = "0.3.16"
qr_code = { version = "2.0.0", features = ["bmp"] }
base64 = "0.21.0"
percent-encoding = "2.2.0"
bitcoin-private = "0.1.0"
bitcoin_slices = { version = "0.6.2", features = [
    "bitcoin",
    "slice_cache",
] }
clap = { version = "4.2.7", features = ["derive", "env"] }
url = "2.3.1"

[dev-dependencies]
bitcoind = { version = "0.31.0" }
minreq = "2.8.1"
nix = { version = "0.26.2", default-features = false, features = ["signal"] }
scraper = "0.16.0"

[features]
download_bitcoind = ["bitcoind/23_1"]
