[package]
name = "fbbe"
description = "Fast Bitcoin Block Explorer"
version = "0.1.7"
edition = "2021"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
license = "MIT"
repository = "https://github.com/RCasatta/fbbe"
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[dependencies]
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
tokio = { version = "1.47.0", features = [
    "rt",
    "rt-multi-thread",
    "signal",
    "macros",
    "time",
] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
once_cell = "1.16.0"
maud = "0.25.0"
env_logger = { version = "0.11", default-features = false, features = [
    "humantime",
    "auto-color",
] }
bitcoin = { version = "0.32", features = ["serde", "base64"] }
log = "0.4.17"
chrono = "0.4.23"
html2text = "0.6"
mime = "0.3.16"
qr_code = { version = "2.0.0", features = ["bmp"] }
base64 = "0.21.0"
percent-encoding = "2.2.0"
bitcoin-private = "0.1.0"
bitcoin_slices = { version = "0.10.0", features = [
    "bitcoin",
    "slice_cache",
    "sha2",
    "prometheus",
] }
clap = { version = "4.2.7", features = ["derive", "env"] }
url = "2.3.1"
fxhash = "0.2.1"
rocksdb = "0.24.0"
lru = "0.12.0"
prometheus = { version = "0.13.4", features = ["process"] }
lazy_static = "1.5.0"
async_zmq = "0.4.0"
hex = "0.4.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"

[dev-dependencies]
bitcoind = { version = "0.31.0" }
minreq = "2.8.1"
nix = { version = "0.26.2", default-features = false, features = ["signal"] }
scraper = "0.16.0"

[features]
download_bitcoind = ["bitcoind/23_1"]

[profile.dev.package.jemalloc-sys]
opt-level = 1 # not sure why but there is compilation error with 0
